--- a/src/Styling/Content.scss
+++ b/src/Styling/Content.scss
@@ -1,6 +1,12 @@
 #content {
   max-width: 1100px;
-  margin: 0 calc((100% - 1100px) / 2);
+  width: 100%;
+}
+
+@media only screen and (min-width: 1100px) {
+  #content {
+    margin: 0 calc((100% - 1100px) / 2);
+  }
 }
 
 .intro {
@@ -10,4 +16,5 @@
   border: 1px dashed #000000;
   padding: 16px;
   border-radius: 10px;
+  width: 90%;
 }
