--- a/src/Styling/Header.scss
+++ b/src/Styling/Header.scss
@@ -4,6 +4,7 @@
   background-color: $dblue;
   padding: 0.05em 0;
   box-shadow: 0 0 15px 0 $shadow-dblue;
+  width: 100%;
   > div {
     margin: 1.25em 2.5%;
     h1 {
