--- a/src/Styling/Project.scss
+++ b/src/Styling/Project.scss
@@ -1,63 +1,85 @@
 @import "./colours.scss";
 
 .project {
-  width: 60%;
+  width: 90%;
+  max-width: 660px;
   background-color: $lgtstblue;
   height: 150px;
-  border-radius: 15px;
+  border-radius: 0 0 15px 15px;
   box-shadow: 0px 0px 7px $shadow-dblue;
   position: relative;
   .imageDiv {
-    width: 150px;
-    height: 100%;
+    /*min-width: 150px;*/
+    flex-shrink: 0;
+    padding: 1.1em;
     img {
-      margin: 15px;
-      height: 120px;
-      border-radius: 25%;
+      height: 100%;
+      max-width: 100%;
+      border-radius: 15px;
     }
   }
-  .info {
-    position: absolute;
-    top: 15px;
-    left: 150px;
-    max-width: 50ch;
-    h3 {
-      margin-bottom: 5px;
+  .content {
+    flex-grow: 1;
+    .title {
+      $temp: calc(1.1em - 5px);
+      h1 {
+        margin-top: $temp;
+      }
+    }
+    .desc {
+      margin-top: 5px;
+      width: 90%;
+      p {
+        text-align: justify;
+        font-size: small;
+      }
     }
   }
+
+  .madeWith,
   .status {
-    position: absolute;
-    bottom: 15px;
-    left: 150px;
     background-color: $dblue;
+    position: absolute;
+    border-radius: 7px 7px 0 0;
     box-shadow: 0px 0px 5px $shadow-dblue;
+    z-index: -1;
+    top: -30px;
     padding: 7px;
-    border-radius: 10px;
   }
+
   .madeWith {
-    p {
-      height: 1em;
-      svg {
-        margin-right: 7px;
-      }
-      svg:last-of-type {
-        margin-right: 0;
-      }
-    }
-    background-color: $dblue;
-    padding: 5px;
-    position: absolute;
-    top: 12.5px;
-    right: 12.5px;
-    border-radius: 7px;
+    display: flex;
+    gap: 5px;
+    right: 0;
   }
+
+  .status {
+    font-size: 1em;
+  }
+
   .icons {
     a {
-      font-size: 1.15em;
+      font-size: 1em;
       margin-left: 7px;
     }
     position: absolute;
     right: 15px;
     bottom: 11px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .scaleText {
+    font-size: 0.7rem !important;
+  }
+}
+
+.flex {
+  display: flex;
+  &-between {
+    justify-content: space-between;
+  }
+  &-row {
+    flex-direction: row;
   }
 }
