--- a/src/Styling/Project.scss
+++ b/src/Styling/Project.scss
@@ -11,6 +11,7 @@
   .imageDiv {
     /*min-width: 150px;*/
     flex-shrink: 0;
+    max-width: 150px;
     padding: 1.1em;
     img {
       height: 100%;
