--- a/public/global.css
+++ b/public/global.css
@@ -18,6 +18,8 @@ body {
   min-height: 100%;
 
   background: linear-gradient(to bottom left, #1f1f1f, #1a1a1a);
+
+  scroll-behavior: smooth;
 }
 
 p {
