--- a/src/Styling/global.scss
+++ b/src/Styling/global.scss
@@ -14,6 +14,13 @@
 	src: url('../Fonts/Rubik/rubik-normal.woff2') format('woff2');
 }
 
+@font-face {
+	font-family: 'CascadiaCode';
+	font-style: normal;
+	font-display: swap;
+	src: url('../Fonts/CascadiaCode/CascadiaCode.woff2') format('woff2');
+}
+
 * {
 	margin: 0;
 	padding: 0;
