--- a/src/Styling/global.scss
+++ b/src/Styling/global.scss
@@ -32,7 +32,7 @@
 body,
 html {
 	overflow-x: hidden;
-	font-size: 100%;
+	// font-size: 100%;
 	background-color: rgb(32, 32, 32);
 }
 
@@ -50,4 +50,23 @@ body::before {
 
 	content: '';
 	pointer-events: none;
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: rgba(0, 0, 0, 0.3);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #464646;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
 }
