--- a/src/Styling/global.scss
+++ b/src/Styling/global.scss
@@ -29,6 +29,13 @@
   color: white;
 }
 
+*:focus {
+  -webkit-tap-highlight-color: transparent;
+  outline: none;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+}
+
 body,
 html {
   overflow-x: hidden;
