it's tailwind time

--- a/src/routes/global.scss
+++ b/src/routes/global.scss
@@ -1,5 +1,4 @@
 //https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,100;0,300;0,700;1,100;1,300;1,700&display=swap&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789.-!%3F%27%23%26%2F%3A()%2C%5C
-
 @font-face {
   font-family: 'Rubik';
   font-style: italic;
@@ -26,6 +25,7 @@
   padding: 0;
   font-family: 'Rubik', sans-serif;
   color: white;
+  box-sizing: border-box;
 }
 
 *:focus {
